swagger category and inputs req body issue fixed
