# src/api/routes/index.ts
@@ -5,11 +5,14 @@ import imageRoutes from './image.routes';
 
 const router = Router();
 // Public routes (user login/signup...etc routes)
-router.use(categoryRoutes);
-router.use(productRoutes);
-router.use(imageRoutes);
 
 // Protected routes (Require authentication)
 // router.use(authMiddleware); // Apply auth middleware to all routes that follow this
+
+router.use(categoryRoutes /* #swagger.tags = ['Category']  */);
+
+router.use(productRoutes /* #swagger.tags = ['Product'] */);
+
+router.use(imageRoutes /* #swagger.tags = ['Image'] */);
 
 export default router;
